Move forward HIV/AIDS, Bayesian, and multi-agyw chapters

--- a/02-hiv-aids.Rmd
+++ b/02-hiv-aids.Rmd
@@ -163,19 +163,25 @@ Among them:
 1. **Data sparsity**
 Collection of data is costly and time consuming.
 As a result, limited direct data might be available for the particular time, location, and sub-population of interest.
-2. **Survey biases**
-Individuals may be hesitant to disclose their HIV status, or report higher risk behaviours, due to social desirability bias and a fear of discrimination or stigma.
-When available, biomarker data can be used to overcome under-reporting, it may still be subject to measurement errors.
-3. **Missing data**
+For example, in many countries the last household survey conducted is several years out of date.
+4. **Missing data**
 Many KPs are difficult to reach, and do not appear on household survey sampling frames.
 Individuals included on the sampling frame may choose not to respond.
+Mismatch of the sampling frame to the target population, sampling error, and non-response can all be characterised as issues of missing data.
+Note that I characterise data sparsity as referring to limited study availability, and missing data as referring to the shortfalls of any given study.
+3. **Survey biases**
+Individuals may be hesitant to disclose their HIV status, or report higher risk behaviours, due to social desirability bias and a fear of discrimination or stigma.
+When available, biomarker data can be used to overcome under-reporting, but still may be subject to measurement errors.
 4. **Denominators and demography**
 Many indicators are rates or proportions, which rely on estimates of the population at risk in the denominator.
 Accurately estimating these denominators is itself a challenging task [@tatem2017worldpop].
-Taking a ratio of uncertain quantities amplifies the uncertainty.
+Taking a ratio of uncertain quantities amplifies uncertainty, but is rarely properly accounted for.
+5. **Reliance on epidemiological parameters**
+Indicators often rely on estimates of epidemiological parameters obtained from cohort studies.
+Application of these parameters, which may not generalise to the setting of interest, is often coarse and without proper accounting for uncertainty.
 
-The above challenges make direct interpretation of the data misleading.
-Along with Careful statistical modelling is required to overcome these limitations.
+The above challenges make direct interpretation of the data often misleading.
+Careful statistical modelling is required to overcome these limitations.
 
 1. **Borrowing information**
 When little direct data is available, data judged to be indirectly related can be used to help improve estimation.
