--- a/04-beyond-borders.Rmd
+++ b/04-beyond-borders.Rmd
@@ -18,8 +18,8 @@ bibliography: references.bib
 <!-- For PDF output, include these two LaTeX commands after unnumbered chapter headings, otherwise the mini table of contents and the running header will show the previous chapter -->
 
 In this chapter, I present an investigation of spatial random effects specifications.
-This investigation was motivated by a fundamental question encountered during model construction.
-Namely, should the model be augmented to capture a feature of the data that we believe exists?
+My investigation was motivated by a fundamental question encountered during model construction.
+Namely, should the model be augmented to capture a conjectured feature of the data?
 The results are presented in @howes2023beyond.
 Code for the analysis in this chapter is available from [`athowes/beyond-borders`](https://github.com/athowes/beyond-borders).
 
