--- a/91-appendixB.Rmd
+++ b/91-appendixB.Rmd
@@ -1,5 +1,40 @@
 # A model for risk group proportions
 
+## The Global AIDS Strategy
+
+\begin{table}[h]
+\centering
+\begin{tabularx}{\textwidth}{lX}
+\toprule
+Prioritisation strata & Criterion  \\
+\midrule
+Low & 0.3-1.0\% incidence and low-risk behaviour, or $<$0.3\% incidence and high-risk behaviour \\
+Moderate & 1.0-3.0\% incidence and low-risk behaviour, or 0.3-1.0\% incidence and high-risk behaviour \\
+High & 1.0-3.0\% incidence and high-risk behaviour \\
+Very high & $>$3.0\% incidence \\
+\bottomrule
+\end{tabularx}
+\caption{Prioritisation strata according to HIV incidence in the general population and behavioural risk.}
+\label{tab:unaids-strategy-prioritisation}
+\end{table}
+
+\begin{table}[h]
+\centering
+\begin{tabularx}{\textwidth}{p{8cm}XXXX}
+\toprule
+Intervention & Low & Moderate & High & Very High \\
+\midrule
+Condoms and lube for those with non-regular partners(s) with unknown STI status and not on PrEP & 50\% & 70\% & 95\% & 95\% \\
+STI screening and treatment & 10\% & 10\% & 80\% & 80\% \\
+Access to PEP & - & - & 50\% & 90\% \\
+PrEP use & - & 5\% & 50\% & 50\% \\
+Economic empowerment & - & - & 20\% & 20\% \\
+\bottomrule
+\end{tabularx}
+\caption{Commitments to be met for each intervention in terms of proportion of the prioritisation strata reached. The symbol "-" represents no commitment.}
+\label{tab:unaids-strategy-targets}
+\end{table}
+
 ## Household survey data
 
 \begin{longtable}{rlrcrrrr}
@@ -111,7 +146,7 @@ Total &  &  &  & $9826$ & $8563$ & $7347$ & $25736$ \\
 \midrule 
 Total &  &  &  & $106397$ & $95253$ & $82518$ & $284168$ \\ 
 \bottomrule
-\caption{All of the surveys that we used in our analysis and their sample sizes, disaggregated by respondent age.}
+\caption{All of the surveys that used in the analysis and their sample sizes, disaggregated by respondent age.}
 \label{tab:surveys-used}
 \end{longtable}
 
@@ -128,7 +163,7 @@ ZMB2002DHS & No GPS coordinates available to place survey clusters within distri
 \bottomrule
 \end{tabularx}
 \label{tab:surveys-excluded}
-\caption{All of that surveys that were excluded from our analysis.}
+\caption{All of that surveys that were excluded from the analysis.}
 \end{table}
 
 ## Spatial analysis levels
@@ -155,5 +190,41 @@ Zimbabwe & 63 & 2 \\
 \bottomrule
 \end{tabularx}
 \label{tab:area-levels}
-\caption{The numer of areas and analysis levels for each country that were used in our analysis.}
+\caption{The numer of areas and analysis levels for each country that were used in the analysis.}
+\end{table}
+
+## Survey questions and risk group allocation
+
+\begin{table}[h]
+\centering
+\begin{tabularx}{\textwidth}{lX}
+\toprule
+Variable(s) & Description \\
+\midrule
+\texttt{v501} & Current marital status of the respondent. \\
+\texttt{v529} & Computed time since last sexual intercourse. \\
+\texttt{v531} & Age at first sexual intercourse--imputed. \\
+\texttt{v766b} & Number of sexual partners during the last 12 months (including husband). \\
+\texttt{v767[a, b, c]} & Relationship with last three sexual partners. Options are: spouse, boyfriend not living with respondent, other friend, casual acquaintance, relative, commercial sex worker, live-in partner, other. \\
+\texttt{v791a} & Had sex in return for gifts, cash or anything else in the past 12 months. Asked only to women 15-24 who are not in a union. \\
+\bottomrule
+\end{tabularx}
+\caption{The survey questions included in AIDS Indicator Survey (AIS) and Demographic and Health Surveys (DHS).}
+\end{table}
+
+\begin{table}[h]
+\centering
+\begin{tabularx}{\textwidth}{lX}
+\toprule
+Variable(s) & Description \\
+\midrule
+\texttt{part12monum} & Number of sexual partners during the last 12 months (including husband). \\
+\texttt{part12modkr} & Reason for leaving \texttt{part12monum} blank. \\
+\texttt{partlivew[1, 2, 3]} & Does the person you had sex with live in this household? \\
+\texttt{partrelation[1, 2, 3]} & Relationship with last three sexual partners. Options are: husband, live-in partner, partner (not living with), ex-spouse/partner, friend/acquaintance, sex worker, sex worker client, stranger, other, don't know, refused. \\
+\texttt{sellsx12mo} & Had sex for money and/or gifts in the last 12 months. \\
+\texttt{buysx12mo} & Paid money or given gifts for sex in the last 12 months. \\
+\bottomrule
+\end{tabularx}
+\caption{The survey questions included in Population-Based HIV Impact Assessment (PHIA) surveys.}
 \end{table}
