--- a/index.Rmd
+++ b/index.Rmd
@@ -20,7 +20,7 @@ abstract: |
   `r paste(readLines("front-and-back-matter/_abstract.Rmd"), collapse = '\n  ')`
 acknowledgements: |
   `r paste(readLines("front-and-back-matter/_acknowledgements.Rmd"), collapse = '\n  ')`
-dedication: \textit{For someone, or something}
+dedication: \textit{For someone, or something.}
 abbreviations: "front-and-back-matter/abbreviations" # path to .tex file with abbreviations
 notations: "front-and-back-matter/notations"
 
