--- a/figures/bayesian/hierarchical-structure.tex
+++ b/figures/bayesian/hierarchical-structure.tex
@@ -5,20 +5,20 @@
 
 \begin{document}
 
-\tikzstyle{category} = [rectangle, draw, text width=8em, text centered, rounded corners, minimum height=4em]
+\tikzstyle{category} = [rectangle, draw, text width=9em, text centered, rounded corners, minimum height=4em]
 \tikzstyle{empty} = [rectangle, draw=none, text width=4em, text centered, rounded corners, minimum height=4em]
 \tikzstyle{line} = [draw, -latex']
 
 \begin{tikzpicture}[node distance = 2cm, auto]
     \node[category] at (0, 0) (1) {Individual 1};
     \node[empty] at (5, 0) (9) {$\cdots$};
-    \node[category] at (10, 0) (2) {Individual $J$};
-    \node[category] at (-2.5, -4) (3) {Measurement 1};
+    \node[category] at (10, 0) (2) {Individual $n$};
+    \node[category] at (-2.5, -4) (3) {Observation $y_{11}$};
     \node[empty] at (0, -4) (4) {$\cdots$};
-    \node[category] at (2.5, -4) (5) {Measurement $n_1$};
-    \node[category] at (7.5, -4) (6) {Measurement 1};
+    \node[category] at (2.5, -4) (5) {Observation $y_{1m_1}$};
+    \node[category] at (7.5, -4) (6) {Observation $y_{n1}$};
     \node[empty] at (10, -4) (7) {$\cdots$};
-    \node[category] at (12.5, -4) (8) {Measurement $n_J$};
+    \node[category] at (12.5, -4) (8) {Observation $y_{nm_n}$};
     
     \path[line] (1) -- (3);
     \path[line] (1) -- (4);
