--- a/references.bib
+++ b/references.bib
@@ -1229,3 +1229,60 @@ doi = {10.1201/9781420072884-c30}
   publisher={World Health Organization}
 }
 
+@article{gelman2007struggles,
+  title={Struggles with survey weighting and regression modeling},
+  author={Gelman, Andrew},
+  year={2007}
+}
+
+@article{hoffman2014no,
+  title={The No-U-Turn sampler: adaptively setting path lengths in Hamiltonian Monte Carlo.},
+  author={Hoffman, Matthew D and Gelman, Andrew and others},
+  journal={J. Mach. Learn. Res.},
+  volume={15},
+  number={1},
+  pages={1593--1623},
+  year={2014}
+}
+
+@article{carpenter2017stan,
+  title={{Stan: A probabilistic programming language}},
+  author={Carpenter, Bob and Gelman, Andrew and Hoffman, Matthew D and Lee, Daniel and Goodrich, Ben and Betancourt, Michael and Brubaker, Marcus and Guo, Jiqiang and Li, Peter and Riddell, Allen},
+  journal={Journal of Statistical Software},
+  volume={76},
+  number={1},
+  year={2017},
+  publisher={Columbia Univ., New York, NY (United States); Harvard Univ., Cambridge, MA~…}
+}
+
+@inproceedings{yao2018yes,
+  title={Yes, but did it work?: Evaluating variational inference},
+  author={Yao, Yuling and Vehtari, Aki and Simpson, Daniel and Gelman, Andrew},
+  booktitle={International Conference on Machine Learning},
+  pages={5581--5590},
+  year={2018},
+  organization={PMLR}
+}
+
+@article{duane1987hybrid,
+  title={{Hybrid Monte Carlo}},
+  author={Duane, Simon and Kennedy, Anthony D and Pendleton, Brian J and Roweth, Duncan},
+  journal={Physics letters B},
+  volume={195},
+  number={2},
+  pages={216--222},
+  year={1987},
+  publisher={Elsevier}
+}
+
+@article{neal2011mcmc,
+  title={{MCMC using Hamiltonian dynamics}},
+  author={Neal, Radford M and others},
+  journal={Handbook of Markov chain Monte Carlo},
+  volume={2},
+  number={11},
+  pages={2},
+  year={2011},
+  publisher={Chapman and Hall/CRC}
+}
+
